Overflow fix

--- a/src/sass/pages/_entry_landing.scss
+++ b/src/sass/pages/_entry_landing.scss
@@ -6,7 +6,7 @@
             position: relative;
         }
         .wave_container {
-            position: absolute;
+            // position: absolute;
             bottom: 0;
             right: 0;
             left: 0;
